--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@nuxtjs/axios": "^5.3.6",
     "@nuxtjs/pwa": "^2.6.0",
     "cross-env": "^5.2.0",
-    "nuxt": "^2.3.4"
+    "nuxt": "^2.3.4",
+    "nuxt-purgecss": "^0.2.1",
+    "nuxt-webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^0.0.1",
@@ -34,7 +36,10 @@
     "eslint-plugin-standard": ">=4.0.0",
     "eslint-plugin-vue": "^5.0.0",
     "nodemon": "^1.18.9",
-    "nuxt-webfontloader": "^1.0.0",
+    "postcss-import": "^12.0.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.5.0",
+    "postcss-url": "^8.0.0",
     "prettier": "1.14.3",
     "tailwindcss": "^0.7.0"
   }
