--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.5.0",
+    "postcss-typography": "^1.0.0",
     "postcss-url": "^8.0.0",
     "prettier": "1.14.3",
     "tailwindcss": "^0.7.0"
